# blue-book

./: .gitignore  Dockerfile  Doxyfile  README.md  docker-compose.yml  fl.py  generator.py  pyproject.toml  template_reference.md  test.ipynb
.github/workflows/: publish.yml  quality-check.yml
bluebook/: confguration.py  configuration.py  data_models.py  database_manager.py  enum_classes.py  file_manager.py  fl.py  generator.py  token_manager.py
bluebook/exceptions/: file_attachment.py
bluebook/helpers/: file_attachment.py
bluebook/static/: styles.css
bluebook/templates/: attached_files.html.j2  base.html.j2  check.html.j2  exam_constructor.html.j2  files_manager.html.j2  prompt_builder.html.j2  saved_questions.html.j2  uploaded_files.html.j2
examples/videos/: bluebook demo.mp4:Zone.Identifier
notebooks/: file_upload.ipynb  promptbuilder.ipynb  promptstest.ipynb
sample_files/: file1.txt
scripts/: generate_docs.sh
static/: styles.css
templates/: base.html.j2
test/: test_file_upload.ipynb
