[project]
name = "gemini-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya Smut",email = "p2688910@my365.dmu.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai (>=1.2.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
