[tool.poetry]
name = "student-bluebook"
version = "1.1.0"
description = "Blue Book generates multiple-choice questions for IT certifications, e.g. CompTIA A+ and Security+"
authors = ["Ilya Smut <ilya.smut.off.g@gmail.com>"]
readme = "README.md"
packages = [{include = "bluebook"}]
homepage = "https://student-bluebook.notion.site/"
repository = "https://github.com/ilya-smut/blue-book"
documentation = "https://github.com/ilya-smut/blue-book/wiki"

[tool.poetry.dependencies]
python = ">=3.10"
google-genai = ">=1.2.0,<2.0.0"
flask = "3.1.1"
click = ">=8.1.8,<9.0.0"
pydantic = "^2.10.6"
sqlmodel = "^0.0.24"
bleach = "^6.2.0"
jinja2 = "3.1.6"
mypy = "^1.16.0"
types-bleach = "^6.2.0.20250514"
ruff = "^0.11.12"

[tool.poetry.scripts]
bluebook = "bluebook.fl:bluebook"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
